--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -16,6 +16,13 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+body {
+    /* height: 100vh; */
+    overflow-y: auto;
+    transform-style: preserve-3d;
+    perspective: 1px;
 }
 
 @keyframes logo-spin {
@@ -47,4 +54,20 @@
     justify-content: center;
     align-items: center;
     padding: 2rem;
+}
+
+.child-with-perspective-effect {
+    transform: translateZ(-0.25px) scale(1.15);
+}
+
+.imgClass {
+    width: 60%;
+    height: 60%;
+}
+
+.skillContainer {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2rem;
+    margin: 2rem;
 }
