--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ a:hover {
 /*  min-height: 100vh;*/
 /*}*/
 
+body {
+  background: gainsboro;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
